@@ -65,6 +65,8 @@
   *  - Fixed MIDI_Device_SendEventPacket() not correctly waiting for the endpoint to become ready (thanks to Robin Green)
   *  - Fixed Benito and USBtoSerial projects not turning off the USART before reconfiguring it, which could cause incorrect
   *    operation to occur (thanks to Bob Paddock)
+  *  - Fixed Serial peripheral driver not turning off the USART before reconfiguring it, which would cause incorrect operation
+  *    to occur (thanks to Bob Paddock)
   *
   *  \section Sec_ChangeLog100513 Version 100513
   *  <b>New:</b>
